<resources>
    <string name="app_name">Ocorrencias Municipais</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lbEmail">"Email"</string>
    <string name="lbSenha">"Senha"</string>
    <string name="btEntrar">"Entrar"</string>
    <string name="btCriarNovaConta">"Criar Nova Conta"</string>
    <string name="btEsqueceuSenha">"Esqueceu Sua Senha?"</string>

    <string name="lbNomeUser">"Nome"</string>
    <string name="lbEmailUser">"Email"</string>
    <string name="lbTelefoneUser">"Telefone"</string>
    <string name="lbDddUser">"DDD"</string>
    <string name="lbDtNascimento">"Data de Nascimento"</string>
    <string name="lbSenhaUser">"Senha"</string>
    <string name="lbConfirmarSenhaUser">"Confirmar Senha"</string>
    <string name="btCriarConta">"Criar Conta"</string>
    <string name="hint_text">"Criar Conta"</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_activity_ocorrencias">OcorrenciasActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ocorrências Municipais</string>
    <string name="nav_header_subtitle">lcmora@minha.fag.edu.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_feed_navigation">FeedNavigationActivity</string>


</resources>
