<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="projeto.fag.com.ocorrenciasmunicipais.ui.feed.FeedFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_criar_ocorrencias"
        android:name="projeto.fag.com.ocorrenciasmunicipais.ui.criarOcorrencias.CriarOcorrenciasFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_criar_ocorrencias" />

    <fragment
        android:id="@+id/nav_ocorrencias"
        android:name="projeto.fag.com.ocorrenciasmunicipais.ui.ocorrencias.OcorrenciasFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_ocorrencias" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="projeto.fag.com.ocorrenciasmunicipais.ui.perfil.PerfilFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_perfil" />



    <fragment
        android:id="@+id/nav_tools"
        android:name="projeto.fag.com.ocorrenciasmunicipais.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="projeto.fag.com.ocorrenciasmunicipais.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />


</navigation>